# synapse-db-query

./: .gitignore  .mcpbignore  Makefile  README.md  manifest.json  mpak.json  pyproject.toml  server.json
.github/workflows/: release.yml
schemas/: query.schema.json
skills/query-coach/: SKILL.md
src/synapse_db_query/: __init__.py  server.py  ui.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx
