[project]
name = "synapse-db-query"
version = "0.1.0"
description = "Natural-language Postgres query app with dynamic Vega-Lite visualizations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
authors = [
    { name = "NimbleBrain Inc", email = "hello@nimblebrain.ai" },
]
keywords = ["mcp", "postgres", "sql", "synapse", "nimblebrain", "vega-lite"]
dependencies = [
    "fastmcp>=2.14.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.0.0",
    "upjack[mcp]>=0.5.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synapse_db_query"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.13.1",
    "ty>=0.0.1a1",
]
